--- a/public/comunidad.css
+++ b/public/comunidad.css
@@ -83,22 +83,27 @@ a {
 }
 
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #333;
-    color: white;
-    padding: 15px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 20;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #333;
+  color: white;
+  padding: 15px 20px;
+  position: fixed;
+  top: 0;
+  left: 250px; 
+  right: 0;
+  height: 60px;
+  box-sizing: border-box;
+  z-index: 20;
 }
+
 
 .navbar-left h1 {
     font-size: 24px;
-    margin-left: 20px;
+    margin: 0;
+    padding: 0;
+    text-align: center;
 }
 
 .navbar-right {
